# opencarenet

./: .gitignore  .pre-commit-config.yaml  404.html  AIDER_INSTRUCTIONS.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: index.md
opencarenet/: __init__.py
opencarenet/agents/: __init__.py  fitness.py  protocols.py
search/: search_index.json
tests/: test_smoke.py
