[project]
name = "opencarenet"
version = "0.1.0"
description = "MVP – modular open‑source health‑assistants network."
authors = [
    {name = "Christian Weinrich",email = "weinrich.c@web.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.4"
mypy = "^1.17.0"
pytest = "^8.4.1"
pre-commit = "^4.2.0"
commitizen = "^4.8.3"


[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]
